[gd_scene load_steps=2 format=3 uid="uid://bqudr864ptf7r"]

[ext_resource type="Script" uid="uid://1a3nrkdo50tg" path="res://addons/curved_lines_2d/assign_collision_inspector_form.gd" id="1_wi77q"]

[node name="AssignCollisionInspectorForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wi77q")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer"]
clip_contents = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will create a new CollisionPolygon2D node and assign it to the collision_polygon property of this ScalableVectorScape2D."
mouse_filter = 0
text = "Add Collision"

[node name="CreateCollisionButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "This will create a new Polygon2D node and assign it to the polygon property of this ScalableVectorScape2D."
text = "Add Collision"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ButtonContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer2"]
clip_contents = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click on this button to select the CollisionPolygon2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot."
mouse_filter = 0
text = "Edit CollisionPolygon2D*"

[node name="GotoCollisionButton" type="Button" parent="ButtonContainer2"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Click on this button to select the CollisionPolygon2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot."
text = "Edit CollisionPolygon2D"

[connection signal="pressed" from="ButtonContainer/CreateCollisionButton" to="." method="_on_create_collision_button_pressed"]
[connection signal="pressed" from="ButtonContainer2/GotoCollisionButton" to="." method="_on_goto_collision_button_pressed"]
